--- a/html and javascript/pig dice game advanced version included/style.css
+++ b/html and javascript/pig dice game advanced version included/style.css
@@ -146,13 +146,29 @@ i {
 .btn-new { top: 45px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
-.btn-rules {
-        left: 5%;
-        top: 30px;}
-
+.btn-mode { top: 520px;}
+.btn-rules {left: 5%;
+            top: 30px;}
+.score{
+    position: absolute;
+    top: 38px;
+    right: 16px;
+    font-family: Lato;
+    font-weight: 300;
+    color: #555;
+}
 .dice {
     position: absolute;
     left: 50%;
+    top: 178px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+.dice2 {
+    position: absolute;
+    display : "none";
+    left: 55%;
     top: 178px;
     transform: translateX(-50%);
     height: 100px;
