--- a/Chrome extensions/Apratments filter/src/popup/popup.scss
+++ b/Chrome extensions/Apratments filter/src/popup/popup.scss
@@ -5,4 +5,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+
+    .empty-message {
+        margin: auto;
+        text-align: center;
+    }
 }
