--- a/Chrome extensions/bypass sign up blocker/src/popup/popup.scss
+++ b/Chrome extensions/bypass sign up blocker/src/popup/popup.scss
@@ -1,8 +1,7 @@
 .extension-wrapper {
-    height: 200px;
-    width: 200px;
+    height: 40px;
+    width: 120px;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
